--- a/special-pages/pages/duckplayer/app/components/YouTubeError.module.css
+++ b/special-pages/pages/duckplayer/app/components/YouTubeError.module.css
@@ -16,9 +16,9 @@
 .error.mobile {
     border-radius: var(--inner-radius);
     overflow: hidden;
-    height: auto;
+    height: 100%;
 
-    @media screen and (min-width: 600px) {
+    @media screen and (min-width: 600px) and (min-height: 600px) {
         aspect-ratio: 16 / 9;
     }
 }
@@ -34,19 +34,19 @@
     display: flex;
     column-gap: 24px;
     row-gap: 4px;
-    flex-flow: column;
+    flex-flow: row;
     max-width: 680px;
-    padding: 0 24px;
+    padding: 0 40px;
+    margin: 0;
+}
+
+.mobile .container {
     margin: 16px 0;
+    padding: 0 24px;
+    flex-flow: column;
 
     @media screen and (min-width: 376px) {
         margin: 36px 0;
-    }
-
-    @media screen and (min-width: 600px) {
-        flex-flow: row;
-        padding: 0 40px;
-        margin: 0;
     }
 }
 
@@ -75,7 +75,7 @@
         width: 48px;
     }
 
-    @media screen and (min-width: 376px) {
+    @media screen and (min-width: 376px) and (min-height: 376px) {
         display: flex;
     }
 
@@ -124,3 +124,4 @@ ul.messages {
         margin-left: 24px;
     }
 }
+
