--- a/special-pages/pages/history/app/components/App.module.css
+++ b/special-pages/pages/history/app/components/App.module.css
@@ -11,7 +11,7 @@ body {
 .layout {
     display: grid;
     grid-template-columns: 250px 1fr;
-    grid-template-rows: max-content auto;
+    grid-template-rows: max-content 1fr;
     grid-template-areas:
             'aside header'
             'aside main';
