--- a/special-pages/pages/history/app/components/VirtualizedList.module.css
+++ b/special-pages/pages/history/app/components/VirtualizedList.module.css
@@ -9,3 +9,26 @@
     padding: 0;
     margin: 0;
 }
+
+.emptyState {
+    width: 100%;
+    height: 100%;
+    text-align: center;
+    color: var(--history-text-normal)
+}
+
+.emptyStateOffset {
+    padding-top: var(--sp-32);
+}
+
+.emptyStateImage {
+    width: 128px;
+    height: 96px;
+    display: inline-block;
+}
+
+.emptyTitle {
+    font-size: var(--title-3-em-font-size);
+    font-weight: var(--title-3-em-font-weight);
+    line-height: var(--title-3-em-line-height);
+}
