dynamic handling of results

--- a/special-pages/pages/history/app/components/Header.module.css
+++ b/special-pages/pages/history/app/components/Header.module.css
@@ -42,6 +42,10 @@
             background-color: var(--color-white-at-12)
         }
     }
+
+    &[aria-disabled="true"] {
+        opacity: .3;
+    }
 }
 
 .search {
