--- a/special-pages/pages/history/app/components/Sidebar.module.css
+++ b/special-pages/pages/history/app/components/Sidebar.module.css
@@ -54,7 +54,7 @@
     border: none;
     cursor: pointer;
     opacity: 0;
-    color: inherit;
+    color: var(--history-text-normal);
 
     &:hover, &:focus-visible {
         background: var(--color-black-at-9);
