--- a/special-pages/pages/history/app/components/App.module.css
+++ b/special-pages/pages/history/app/components/App.module.css
@@ -18,6 +18,7 @@ body {
             'aside main';
     overflow: hidden;
     height: 100vh;
+    background-color: var(--history-background-color);
 }
 .header {
     grid-area: header;
