history: favicon support

--- a/special-pages/pages/history/app/components/Item.module.css
+++ b/special-pages/pages/history/app/components/Item.module.css
@@ -81,6 +81,10 @@
     border-bottom-right-radius: var(--row-radius);
 }
 
+.favicon {
+    flex-shrink: 0;
+    min-width: 0;
+}
 
 .entryLink {
     white-space: nowrap;
