--- a/special-pages/pages/history/app/components/VirtualizedList.module.css
+++ b/special-pages/pages/history/app/components/VirtualizedList.module.css
@@ -14,21 +14,36 @@
     width: 100%;
     height: 100%;
     text-align: center;
-    color: var(--history-text-normal)
+    color: var(--history-text-normal);
+    display: grid;
+    grid-template-rows: max-content max-content;
+    justify-items: center;
 }
 
 .emptyStateOffset {
-    padding-top: var(--sp-32);
+    padding-top: 30vh;
 }
 
-.emptyStateImage {
+.icons {
     width: 128px;
     height: 96px;
-    display: inline-block;
+    position: relative;
+}
+
+.forground {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translateY(-50%) translateX(-50%);
 }
 
 .emptyTitle {
     font-size: var(--title-3-em-font-size);
     font-weight: var(--title-3-em-font-weight);
     line-height: var(--title-3-em-line-height);
+    margin-top: 16px;
+}
+.emptyText {
+    margin-top: 8px;
+    color: var(--history-text-muted)
 }
