--- a/special-pages/pages/duckplayer/app/components/MobileApp.module.css
+++ b/special-pages/pages/duckplayer/app/components/MobileApp.module.css
@@ -313,4 +313,20 @@ body:has([data-state="completed"] [aria-checked="true"]) .switch {
             border-radius: var(--outer-radius);
         }
     }
+
+    /* Show buttons on landscape */
+    @media screen and (min-width: 600px) and (max-height: 450px) {
+        grid-template-areas:
+            'embed'
+            'buttons';
+
+        grid-template-rows:
+            auto
+            max-content;
+
+        & .buttons {
+            border-radius: 0;
+            display: block;
+        }
+    }
 }
