--- a/special-pages/pages/duckplayer/app/components/YouTubeError.module.css
+++ b/special-pages/pages/duckplayer/app/components/YouTubeError.module.css
@@ -45,7 +45,7 @@
     padding: 0 24px;
     flex-flow: column;
 
-    @media screen and (min-width: 376px) {
+    @media screen and (min-width: 375px) {
         margin: 36px 0;
     }
 }
@@ -64,7 +64,7 @@
 
 .icon {
     align-self: center;
-    display: none;
+    display: flex;
     justify-content: center;
 
     &::before {
@@ -75,11 +75,11 @@
         width: 48px;
     }
 
-    @media screen and (min-width: 376px) and (min-height: 376px) {
-        display: flex;
+    @media screen and (max-width: 320px) {
+        display: none;
     }
 
-    @media screen and (min-width: 600px) {
+    @media screen and (min-width: 600px) and (min-height: 600px) {
         justify-content: start;
 
         &::before {
