--- a/special-pages/pages/duckplayer/app/components/YouTubeError.module.css
+++ b/special-pages/pages/duckplayer/app/components/YouTubeError.module.css
@@ -18,6 +18,10 @@
     overflow: hidden;
     height: 100%;
 
+    /* Prevents automatic text resizing */
+    text-size-adjust: 100%;
+    -webkit-text-size-adjust: 100%;
+
     @media screen and (min-width: 600px) and (min-height: 600px) {
         aspect-ratio: 16 / 9;
     }
