--- a/special-pages/pages/duckplayer/app/components/YouTubeError.module.css
+++ b/special-pages/pages/duckplayer/app/components/YouTubeError.module.css
@@ -7,16 +7,16 @@
 }
 
 .error.desktop {
-    z-index: 1;
-    position: relative;
-    overflow: hidden;
     height: var(--frame-height);
+    overflow: hidden;
+    position: relative;
+    z-index: 1;
 }
 
 .error.mobile {
     border-radius: var(--inner-radius);
-    overflow: hidden;
     height: 100%;
+    overflow: auto;
 
     /* Prevents automatic text resizing */
     text-size-adjust: 100%;
@@ -35,19 +35,19 @@
 }
 
 .container {
-    display: flex;
     column-gap: 24px;
-    row-gap: 4px;
+    display: flex;
     flex-flow: row;
+    margin: 0;
     max-width: 680px;
     padding: 0 40px;
-    margin: 0;
+    row-gap: 4px;
 }
 
 .mobile .container {
+    flex-flow: column;
     margin: 16px 0;
     padding: 0 24px;
-    flex-flow: column;
 
     @media screen and (min-width: 375px) and (min-height: 400px) {
         margin: 36px 0;
