--- a/special-pages/pages/duckplayer/app/components/MobileApp.module.css
+++ b/special-pages/pages/duckplayer/app/components/MobileApp.module.css
@@ -318,11 +318,13 @@ body:has([data-state="completed"] [aria-checked="true"]) .switch {
     @media screen and (min-width: 600px) and (max-height: 450px) {
         grid-template-areas:
             'embed'
-            'buttons';
+            'buttons'
+            'gap5';
 
         grid-template-rows:
             auto
-            max-content;
+            max-content
+            8px;
 
         & .buttons {
             border-radius: var(--outer-radius);
