--- a/special-pages/pages/new-tab/app/vpn/components/Vpn.module.css
+++ b/special-pages/pages/new-tab/app/vpn/components/Vpn.module.css
@@ -39,6 +39,7 @@
     line-height: var(--small-label-line-height);
     display: flex;
     align-items: center;
+    color: var(--ntp-text-muted);
 
     svg {
         margin-right: 1px;
