--- a/special-pages/pages/new-tab/app/vpn/components/Usage.module.css
+++ b/special-pages/pages/new-tab/app/vpn/components/Usage.module.css
@@ -1,20 +1,29 @@
 .root {
-    font-size: var(--small-label-font-size);
-    font-weight: var(--small-label-font-weight);
-    line-height: var(--small-label-line-height);
     margin-top: var(--ntp-gap);
+    display: grid;
+    grid-template-columns: 1fr 24px;
+    grid-column-gap: 5px;
+    grid-template-areas: 'title title' 'chart labels';
+}
+
+.title {
+    margin-bottom: 8px;
+    grid-area: title
+}
+.labelMuted {
+    color: var(--ntp-text-muted)
 }
 
 .chart {
-    border-radius: var(--border-radius-md);
-    overflow: hidden;
-    color: var(--ntp-text-muted);
     --bars-height: 90px;
     --inline-padding: calc(8 * var(--px-in-rem));
     --column-gap: calc(16 * var(--px-in-rem));
     --border-color: rgba(0, 0, 0, 0.06);
     --footer-bg: rgba(0, 0, 0, 0.01);
     --bar-color: rgba(0, 0, 0, 0.06);
+
+    grid-area: chart;
+    border-radius: var(--border-radius-md);
 
     [data-theme="dark"] & {
         --border-color: var(--color-white-at-12);
@@ -49,6 +58,10 @@
 
 .footer {
     display: grid;
+    color: var(--ntp-text-muted);
+    font-size: var(--small-label-font-size);
+    font-weight: var(--small-label-font-weight);
+    line-height: var(--small-label-line-height);
     grid-template-columns: repeat(7, 1fr);
     grid-column-gap: var(--column-gap);
     padding-left: var(--inline-padding);
@@ -57,4 +70,44 @@
     border-top: 1px solid var(--border-color);
     background-color: var(--footer-bg);
     height: calc(24 * var(--px-in-rem));
+}
+
+.timeLabel {
+    grid-area: labels;
+    font-size: 10px;
+    color: var(--ntp-text-muted)
+}
+.timeLabel:nth-of-type(1) {
+    transform: translateY(-8px);
+}
+.timeLabel:nth-of-type(2) {
+    margin-top: auto;
+    transform: translateY(-14px);
+}
+
+.pitch {
+    grid-area: chart;
+    display: grid;
+    grid-template-columns: 24px max-content;
+    grid-column-gap: 12px;
+    align-items: center;
+    justify-content: center;
+    height: var(--bars-height);
+}
+.pitchText {
+
+}
+.pitchImg {
+    display: block;
+    width: 24px;
+    height: 24px;
+}
+.pitchTitle {
+
+}
+.pitchSubtitle {
+    color: var(--ntp-text-muted);
+    font-size: var(--small-label-font-size);
+    font-weight: var(--small-label-font-weight);
+    line-height: var(--small-label-line-height);
 }
