--- a/special-pages/pages/new-tab/app/vpn/components/Vpn.module.css
+++ b/special-pages/pages/new-tab/app/vpn/components/Vpn.module.css
@@ -44,9 +44,11 @@
     svg {
         margin-right: 1px;
     }
+    svg:nth-child(1) {
+        transform: rotate(180deg);
+    }
     svg:nth-child(2) {
         margin-left: 8px;
-        transform: rotate(180deg);
     }
     span + span {
         margin-left: 3px;
